name:                text-benchmarks
version:             0.0.0.0
synopsis:            Benchmarks for the text package
description:         Benchmarks for the text package
homepage:            https://bitbucket.org/bos/text
license:             BSD3
license-file:        ../../LICENSE
author:              Jasper Van der Jeugt <jaspervdj@gmail.com>,
                     Bryan O'Sullivan <bos@serpentine.com>,
                     Tom Harper <rtomharper@googlemail.com>,
                     Duncan Coutts <duncan@haskell.org>
maintainer:          jaspervdj@gmail.com
category:            Text
build-type:          Simple

cabal-version:       >=1.2

executable text-benchmarks
  hs-source-dirs: src ../..
  c-sources:      ../../cbits/cbits.c
  main-is:        Data/Text/Benchmarks.hs
  ghc-options:    -Wall -O2
  cpp-options:    -DHAVE_DEEPSEQ
  build-depends:  base              >= 4   && < 5,
                  criterion         >= 0.5 && < 0.6,
                  bytestring        >= 0.9 && < 0.10,
                  deepseq           >= 1.1 && < 1.2,
                  filepath          >= 1.1 && < 1.3,
                  directory         >= 1.1 && < 1.2,
                  containers        >= 0.3 && < 0.5,
                  binary            >= 0.5 && < 0.6,
                  utf8-string       >= 0.3 && < 0.4,
                  blaze-builder     >= 0.3 && < 0.4,
                  bytestring-lexing >= 0.2 && < 0.3,
                  stringsearch      >= 0.3 && < 0.4
