name:          text-tests
version:       0.0.0.0
synopsis:      Functional tests for the text package
description:   Functional tests for the text package
homepage:      https://bitbucket.org/bos/text
license:       BSD3
license-file:  ../../LICENSE
author:        Jasper Van der Jeugt <jaspervdj@gmail.com>,
               Bryan O'Sullivan <bos@serpentine.com>,
               Tom Harper <rtomharper@googlemail.com>,
               Duncan Coutts <duncan@haskell.org>
maintainer:    Bryan O'Sullivan <bos@serpentine.com>
category:      Text
build-type:    Simple

cabal-version: >=1.2

flag hpc
  description: Enable HPC to generate coverage reports
  default:     False

executable text-tests
  hs-source-dirs: src ../..
  main-is:        Data/Text/Tests.hs

  ghc-options:
    -Wall
    -threaded
    -O0

  -- Optional HPC support
  if flag(hpc)
    ghc-options:
      -fhpc

  cpp-options:
    -DASSERTS
    -DHAVE_DEEPSEQ

  build-depends:
    base                       >= 4   && < 5,
    bytestring                 >= 0.9 && < 0.10,
    deepseq                    >= 1.1 && < 1.2,
    directory                  >= 1.1 && < 1.2,
    random                     >= 1.0 && < 1.1,
    QuickCheck                 >= 2.4 && < 2.5,
    HUnit                      >= 1.2 && < 1.3,
    test-framework             >= 0.4 && < 0.5,
    test-framework-quickcheck2 >= 0.2 && < 0.3,
    test-framework-hunit       >= 0.2 && < 0.3

executable text-tests-stdio
  hs-source-dirs: src ../..
  main-is:        Data/Text/Tests/IO.hs

  ghc-options:
    -Wall
    -threaded

  -- Optional HPC support
  if flag(hpc)
    ghc-options:
      -fhpc

  build-depends:
    base >= 4 && < 5
