name:          text-tests
version:       0.0.0.0
synopsis:      Functional tests for the text package
description:   Functional tests for the text package
homepage:      https://bitbucket.org/bos/text
license:       BSD3
license-file:  ../../LICENSE
author:        Jasper Van der Jeugt <jaspervdj@gmail.com>,
               Bryan O'Sullivan <bos@serpentine.com>,
               Tom Harper <rtomharper@googlemail.com>,
               Duncan Coutts <duncan@haskell.org>
maintainer:    Bryan O'Sullivan <bos@serpentine.com>
category:      Text
build-type:    Simple

cabal-version: >=1.8

flag hpc
  description: Enable HPC to generate coverage reports
  default:     False

executable text-tests
  hs-source-dirs: src
  main-is:        Data/Text/Tests.hs

  ghc-options:
    -Wall -threaded -O0 -rtsopts

  if flag(hpc)
    ghc-options:
      -fhpc

  cpp-options:
    -DASSERTS
    -DHAVE_DEEPSEQ

  build-depends:
    text-tests,
    base                       >= 4   && < 5,
    bytestring                 >= 0.9 && < 0.10,
    deepseq                    >= 1.1 && < 1.2,
    directory                  >= 1.1 && < 1.2,
    random                     >= 1.0 && < 1.1,
    QuickCheck                 >= 2.4 && < 2.5,
    HUnit                      >= 1.2 && < 1.3,
    test-framework             >= 0.4 && < 0.5,
    test-framework-quickcheck2 >= 0.2 && < 0.3,
    test-framework-hunit       >= 0.2 && < 0.3

executable text-tests-stdio
  hs-source-dirs: src
  main-is:        Data/Text/Tests/IO.hs

  ghc-options:
    -Wall -threaded -rtsopts

  -- Optional HPC support
  if flag(hpc)
    ghc-options:
      -fhpc

  build-depends:
    text-tests,
    base >= 4 && < 5

library
  hs-source-dirs: ../..
  c-sources: ../../cbits/cbits.c
  exposed-modules:
    Data.Text
    Data.Text.Array
    Data.Text.Encoding
    Data.Text.Encoding.Error
    Data.Text.Foreign
    Data.Text.IO
    Data.Text.Internal
    Data.Text.Lazy
    Data.Text.Lazy.Builder
    Data.Text.Lazy.Builder.Int
    Data.Text.Lazy.Builder.RealFloat
    Data.Text.Lazy.Encoding
    Data.Text.Lazy.IO
    Data.Text.Lazy.Internal
    Data.Text.Lazy.Read
    Data.Text.Read
    Data.Text.Encoding.Fusion
    Data.Text.Encoding.Fusion.Common
    Data.Text.Encoding.Utf16
    Data.Text.Encoding.Utf32
    Data.Text.Encoding.Utf8
    Data.Text.Fusion
    Data.Text.Fusion.CaseMapping
    Data.Text.Fusion.Common
    Data.Text.Fusion.Internal
    Data.Text.Fusion.Size
    Data.Text.IO.Internal
    Data.Text.Lazy.Builder.Functions
    Data.Text.Lazy.Builder.RealFloat.Functions
    Data.Text.Lazy.Encoding.Fusion
    Data.Text.Lazy.Fusion
    Data.Text.Lazy.Search
    Data.Text.Search
    Data.Text.Unsafe
    Data.Text.Unsafe.Base
    Data.Text.UnsafeChar
    Data.Text.UnsafeShift
    Data.Text.Util

  if flag(hpc)
    ghc-options:
      -fhpc

  cpp-options:
    -DHAVE_DEEPSEQ
    -DASSERTS
    -DINTEGER_GMP

  build-depends:
    array,
    base        >= 4   && < 5,
    bytestring  >= 0.9 && < 1.0,
    deepseq     >= 1.1 && < 1.2,
    integer-gmp >= 0.2 && < 0.3,
    ghc-prim    >= 0.2 && < 0.3
